superset/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: superset
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  to:
    kind: Service
    name: superset
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
